--- a/sass/system/_settings.scss
+++ b/sass/system/_settings.scss
@@ -18,8 +18,8 @@ $color-primary: #4db04a;
 $color-dark-primary: darken($color-primary, 20%);
 $color-secondary: #0f2735;
 $color-dark-secondary: darken($color-secondary, 20%);
-$color-light-grey: #e2e2e2;
-$color-grey: grey;
+$color-light-grey: #f0f0f0;
+$color-grey: rgb(139, 139, 139);
 $color-dark-grey: #363636;
 $color-red: #d42349;
 $color-yellow: #f1c226;
