--- a/css/grid-system.css
+++ b/css/grid-system.css
@@ -16,9 +16,9 @@
 .color-black {
   color: black !important; }
 .color-grey {
-  color: grey !important; }
+  color: #8b8b8b !important; }
 .color-light-grey {
-  color: #e2e2e2 !important; }
+  color: #f0f0f0 !important; }
 .color-dark-grey {
   color: #363636 !important; }
 
@@ -35,9 +35,9 @@
 .bg-black {
   background-color: black !important; }
 .bg-grey {
-  background-color: grey !important; }
+  background-color: #8b8b8b !important; }
 .bg-light-grey {
-  background-color: #e2e2e2 !important; }
+  background-color: #f0f0f0 !important; }
 .bg-dark-grey {
   background-color: #363636 !important; }
 
@@ -3586,7 +3586,7 @@ body {
   padding: 22px 0;
   background-color: white;
   color: #363636;
-  border-bottom: solid 1px #e2e2e2;
+  border-bottom: solid 1px #f0f0f0;
   z-index: 99;
   transition: 0.3s;
   -webkit-transition: 0.3s;
@@ -3655,7 +3655,7 @@ body {
       width: 12px;
       height: 12px;
       background: none;
-      border: solid 3px grey;
+      border: solid 3px #8b8b8b;
       border-radius: 999px;
       -webkit-border-radius: 999px;
       -moz-border-radius: 999px;
@@ -3738,8 +3738,8 @@ body {
       color: #091821; }
   .btn-light-outlined {
     background: none;
-    border-color: #e2e2e2;
-    color: #e2e2e2; }
+    border-color: #f0f0f0;
+    color: #f0f0f0; }
     .btn-light-outlined:hover {
       border-color: #ffffff;
       color: white; }
@@ -3763,7 +3763,7 @@ body {
 
 .card {
   background-color: white;
-  border: solid 1px #e2e2e2;
+  border: solid 1px #f0f0f0;
   padding: 15px;
   display: flex;
   flex-direction: column;
@@ -3820,7 +3820,7 @@ body {
       font-weight: bold; }
     .card .card-content .card-subtitle {
       font-size: 0.9rem;
-      color: grey; }
+      color: #8b8b8b; }
     .card .card-content .card-main-text {
       color: #363636; }
   .card .card-links {
@@ -3837,12 +3837,12 @@ body {
 
 .faq {
   width: 100%;
-  border: solid 1px #e2e2e2;
+  border: solid 1px #f0f0f0;
   border-radius: 16px;
   -webkit-border-radius: 16px;
   -moz-border-radius: 16px; }
   .faq .faq-title {
-    background-color: #efefef;
+    background-color: #fdfdfd;
     cursor: pointer;
     padding: 15px;
     display: flex;
@@ -3876,7 +3876,7 @@ body {
       -moz-border-radius-bottomleft: 16px; }
     .faq .faq-title:hover {
       color: #4db04a;
-      background-color: #e2e2e2; }
+      background-color: #f0f0f0; }
     .faq .faq-title .faq_arrow {
       max-height: 1rem;
       margin-left: 1rem;
@@ -3899,9 +3899,9 @@ footer {
   width: 100%;
   padding: 12px 0;
   background-color: white;
-  color: grey;
+  color: #8b8b8b;
   z-index: 99;
-  border-top: solid 1px #e2e2e2;
+  border-top: solid 1px #f0f0f0;
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s; }
