--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -14,9 +14,13 @@ header {
   .section-title h1 {
     font-size: 2rem;
     font-weight: 700;
-    margin: 0; }
+    margin: 0;
+    display: block;
+    text-align: center;
+    line-height: 2.2rem; }
   .section-title a {
-    margin: 10px 0 10px 10px; }
+    margin-top: 10px;
+    margin-bottom: 10px; }
 
 a .img-container img:hover {
   opacity: 0.7; }
